apply plugin: 'com.android.application'
apply plugin: 'kotlin-android'

android {
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    kotlinOptions {
        jvmTarget = JavaVersion.VERSION_1_8
    }
    compileSdk 34
    buildToolsVersion = '34.0.0'
    defaultConfig {
        applicationId "com.mousebirdconsulting.autotester"
        minSdkVersion 21
        targetSdkVersion 34
        versionCode 1
        versionName "1.0"
        multiDexEnabled true
    }
    buildTypes {
        /*
        devRelease {
            minifyEnabled false
            debuggable true
            jniDebuggable true
            renderscriptDebuggable false
            signingConfig signingConfigs.debug
            matchingFallbacks = ['release']
            proguardFiles getDefaultProguardFile('proguard-android.txt'), '../../../../library/maply/proguard-rules.pro'
        }
        */
        release {
            minifyEnabled false
            debuggable false
            jniDebuggable false
            renderscriptDebuggable false
        }
        debug {
            jniDebuggable true
            signingConfig signingConfigs.debug
        }
    }
    ndkVersion '26.3.11579264'
    externalNativeBuild {
        cmake {
            path file('../../../library/maply/CMakeLists.txt')
            version '3.22.1'
        }
    }
    namespace 'com.mousebirdconsulting.autotester'
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation project(path: ':maply')
    implementation 'com.android.support:multidex:1.0.3'
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.google.android.material:material:1.12.0'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
}
repositories {
    mavenCentral()
}
